--- a/src/globals.css
+++ b/src/globals.css
@@ -91,7 +91,7 @@
   }
 
   body {
-    @apply bg-background text-foreground font-oswald; /* Applied Oswald font here */
+    @apply bg-background text-foreground font-space-mono; /* Applied Space Mono font here */
     overflow-x: hidden;
   }
 
